k8s/istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-read
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 31400
  type: LoadBalancer
