k8s/istio/spanner-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spanner-emulator-dr
  namespace: istio-system
spec:
  host: spanner-emulator.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
